--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,13 @@ minimal_mistakes_skin   : "default" #"air", "aqua", "contrast", "dark", "dirt", 
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "º¹Åä¸®Blog"
+title                    : "복토리Blog"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "bboktori"
-description              : "°øºÎ/ÀÏ»ó"
+description              : "Tech/Study/Day"
 url                      : https://bboktori.github.io
-baseurl                  : bboktori/bboktori.github.io
+baseurl                  : 
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
