--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-# theme                 : "minimal-mistakes-jekyll"
+theme                   : "minimal-mistakes-jekyll"
 # remote_theme          : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin   : "default" #"air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin   : "mint" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "ko-KR"
@@ -11,7 +11,7 @@ name                     : "bboktori"
 description              : "Tech/Study/Day"
 url                      : https://bboktori.github.io
 baseurl                  : 
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : bboktori/bboktori.github.io
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -97,9 +97,9 @@ analytics:
 author:
   name             : "bboktori"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : ""
+  bio              : "hello"
   location         : "Seoul, Korea"
-  email            : bboktori.@gmail.com
+  email            : bboktori@gmail.com
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
