--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-theme                   : "minimal-mistakes-jekyll"
-# remote_theme          : "mmistakes/minimal-mistakes"
+# theme                 : "minimal-mistakes-jekyll"
+remote_theme            : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin   : "mint" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
@@ -279,6 +279,6 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
