--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 # Site Author
 author:
   name             : "bboktori"
-  avatar           : "/assets/images/bio-photo.jpg
+  avatar           : "/assets/images/bio-photo.jpg"
   bio              : "hello"
   location         : "Seoul, Korea"
   email            : bboktori@gmail.com
